// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIToast should render a message when messages are passed as props 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  role="status"
>
  <p
    className="xui-toast--message"
  >
    Content
  </p>
</div>
`;

exports[`XUIToast should render a passed qaHook as an automation id 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid="toast-example"
  role="status"
>
  <span>
    Content
  </span>
</div>
`;

exports[`XUIToast should render hidden 1`] = `
<div
  aria-hidden={true}
  className="xui-toast xui-toast-is-hidden xui-toast-layout"
  role="status"
>
  Toast Content
</div>
`;

exports[`XUIToast should render one message as a prop, one action as a prop 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  role="status"
>
  <p
    className="xui-toast--message"
  >
    Content
  </p>
  <div
    className="xui-actions xui-toast--actions"
  >
    <a
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      disabled={false}
      href=""
      onClick={[Function]}
      tabIndex={0}
    >
      Action ONE
    </a>
  </div>
</div>
`;

exports[`XUIToast should render two actions as a prop, but not more than two 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  role="status"
>
  <p
    className="xui-toast--message"
  >
    Content
  </p>
  <div
    className="xui-actions xui-toast--actions"
  >
    <a
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      disabled={false}
      href=""
      onClick={[Function]}
      tabIndex={0}
    >
      Action ONE
    </a>
    <a
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      disabled={false}
      href=""
      onClick={[Function]}
      tabIndex={0}
    >
      Action TWO
    </a>
  </div>
</div>
`;

exports[`XUIToast should render using the XUIActions component under the hood when using the top level primaryActions and secondaryActions API 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  role="status"
>
  <p
    className="xui-toast--message"
  >
    Message as props, actions as individual props
  </p>
  <div
    className="xui-actions xui-toast--actions"
  >
    <a
      className="xui-button xui-actions--primary xui-toast--action xui-button-borderless-main xui-button-small"
      disabled={false}
      href=""
      onClick={[Function]}
      tabIndex={0}
    >
      Action ONE
    </a>
    <a
      className="xui-button xui-actions--secondary xui-toast--action xui-button-borderless-main xui-button-small"
      disabled={false}
      href=""
      onClick={[Function]}
      tabIndex={0}
    >
      Action TWO
    </a>
  </div>
</div>
`;

exports[`XUIToast should still be able to render actions as children, along with message props 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  role="status"
>
  <p
    className="xui-toast--message"
  >
    Message as props, actions as children
  </p>
  <div
    className="xui-actions xui-toast--actions"
  >
    <a
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      disabled={false}
      href=""
      onClick={[Function]}
      tabIndex={0}
    >
      Action ONE
    </a>
    <a
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      disabled={false}
      href=""
      onClick={[Function]}
      tabIndex={0}
    >
      Action TWO
    </a>
  </div>
</div>
`;

exports[`XUIToast should still be able to render messages as children, along with action props 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  role="status"
>
  <p
    className="xui-toast--message"
  >
    Message as child, actions as props
  </p>
  <div
    className="xui-actions xui-toast--actions"
  >
    <a
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      disabled={false}
      href=""
      onClick={[Function]}
      tabIndex={0}
    >
      Action ONE
    </a>
    <a
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      disabled={false}
      href=""
      onClick={[Function]}
      tabIndex={0}
    >
      Action TWO
    </a>
  </div>
</div>
`;
